# dayrecord

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  justfile
.cursor/rules/: git-commit-rhythm.mdc
.github/: repository-metadata.json
.github/workflows/: ci.yml  release.yml
crates/dayrecord-adapters/: Cargo.toml
crates/dayrecord-adapters/src/: clipboard.rs  clock.rs  context_ax.rs  context_linux.rs  context_macos.rs  keyboard.rs  keyboard_capture.rs  keyboard_hook.rs  keyboard_linux.rs  keyboard_macos.rs  keyboard_macos_impl.rs  lib.rs  llm.rs  llm_factory.rs  platform.rs  repository.rs  secret.rs  secret_keyring.rs  uia.rs  uia_common.rs  window.rs  window_unified.rs
crates/dayrecord-adapters/tests/: keyboard_sendinput.rs  live_deepseek.rs
crates/dayrecord-app/: Cargo.toml  tauri.conf.json
crates/dayrecord-app/capabilities/: default.json
crates/dayrecord-app/src/: commands.rs  hermes.rs  lib.rs  main.rs  orchestrator.rs  state.rs
crates/dayrecord-app/tests/: commands_test.rs
crates/dayrecord-cli/: Cargo.toml
crates/dayrecord-cli/src/: daemon.rs  doctor.rs  lib.rs  main.rs  mcp_autostart.rs  mcp_handlers.rs  mcp_result.rs  mcp_server.rs  runtime.rs  version.rs
crates/dayrecord-core/: Cargo.toml
crates/dayrecord-core/src/: connect.rs  consolidation.rs  context.rs  control.rs  error.rs  export.rs  lib.rs  models.rs  paths.rs  patterns.rs  ports.rs  prompt.rs  redact.rs  summary.rs  time_local.rs
crates/dayrecord-core/src/domain/: activity.rs  habits.rs  ime.rs  mod.rs  session.rs
crates/dayrecord-runtime/: Cargo.toml
crates/dayrecord-runtime/src/: lib.rs  orchestrator.rs
crates/dayrecord-runtime/src/control/: autostart.rs  client.rs  handler.rs  instance.rs  mod.rs  server.rs
docs/: AGENT-CONTEXT.md  acceptance-checklist.md  install-prebuilt.md  limitations.md  macos-permissions.md  memory-gap-log.md  packaging.md  traceability.md
docs/decisions/: 2026-06-13-mcp-distribution.md  README.md
docs/integrations/: hermes.md  nanobot.md  openclaw.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  format.test.ts  format.ts  main.ts  markdown.test.ts  markdown.ts  style.css
packaging/: README.md
packaging/scoop/: dayrecord.json
packaging/winget/: com.dayrecord.cli.yaml
scripts/: dev.cmd  dev.ps1  generate-icons.ps1  install-local.ps1  install.ps1  install.sh  local.env.ps1.example  probe-mcp-call.ps1  publish-mcp.ps1  run.cmd  run.ps1
