[workspace]
resolver = "2"
members = [
    "crates/dayrecord-core",
    "crates/dayrecord-adapters",
    "crates/dayrecord-runtime",
    "crates/dayrecord-cli",
    "crates/dayrecord-app",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["mikaku9944"]
repository = "https://github.com/mikaku9944/dayrecord"
homepage = "https://github.com/mikaku9944/dayrecord"
description = "Cross-platform personal work memory: context for AI agents via CLI, MCP, and file export"
readme = "README.md"
keywords = ["mcp", "agent", "memory", "tauri", "productivity"]
categories = ["command-line-utilities", "gui"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0", features = ["chrono04"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"
rstest = "0.23"
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6"
async-trait = "0.1"
directories = "5"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.7", features = ["server", "transport-io"] }
keyring = "3"
active-win-pos-rs = "0.11"
tracing-subscriber = "0.3"
