[package]
name = "dayrecord-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DayRecord platform adapters: SQLite, DeepSeek, capture, keyring"
repository.workspace = true
homepage.workspace = true

[features]
default = []
linux-x11-keyboard = []
linux-atspi = []
macos-keyboard = []
macos-ax = []

[dependencies]
dayrecord-core = { path = "../dayrecord-core" }
active-win-pos-rs = "0.11"
arboard = "3"
keyring = "3"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
rstest = { workspace = true }
