[package]
name = "dayrecord-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DayRecord Tauri desktop application"
repository.workspace = true
homepage.workspace = true

[lib]
name = "dayrecord_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "dayrecord-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dayrecord-core = { path = "../dayrecord-core" }
dayrecord-adapters = { path = "../dayrecord-adapters" }
dayrecord-runtime = { path = "../dayrecord-runtime" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
